--- a/src/Front-end-web/package.json
+++ b/src/Front-end-web/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.29.0",
     "axios": "^1.6.8",
@@ -25,6 +27,7 @@
     "validator": "^13.11.0"
   },
   "devDependencies": {
+    "@types/react": "18.2.75",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
