--- a/src/Front-end-web/package.json
+++ b/src/Front-end-web/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.29.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
