--- a/src/mobile/package.json
+++ b/src/mobile/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "^3.2.1",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~51.0.2",
@@ -18,7 +20,9 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-paper": "^5.12.3",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "4.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
