ajustes no .env.example

--- a/src/Back-end/.env.example
+++ b/src/Back-end/.env.example
@@ -1,2 +1,5 @@
+
 FLASK_ENV=development
-DB_STR_CONNECTION=
+DB_USER=
+PASSWORD=
+DB_STR_CONNECTION=mongodb+srv://{}:{}@cluster0.zhk40vn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
