--- a/src/mobile/package.json
+++ b/src/mobile/package.json
@@ -23,8 +23,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10"
   },
